--- a/Eapcet_Questions_html/chemistry/Notes/polymers.html
+++ b/Eapcet_Questions_html/chemistry/Notes/polymers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Polymers in Chemistry</title>
+    <link rel="icon" type="image/png" href="../../../logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -490,7 +491,7 @@
                                 <p><strong>Preparation:</strong></p>
                                 <p class="text-center">
                                     Terephthalic Acid (HOOC-C<sub>6</sub>H<sub>4</sub>-COOH) <br> 
-                                    <span class="text-muted"><small>(*-COOH groups at para (1,4) positions*)</small></span> <br>
+                                    <span class="text-muted"><small>(-COOH groups at para (1,4) positions)</small></span> <br>
                                     + Ethylene Glycol (HO-CH<sub>2</sub>-CH<sub>2</sub>-OH) → PET
                                 </p>
                                 <p><strong>Properties:</strong> High tensile strength, chemical resistance, lightweight.</p>
@@ -507,7 +508,7 @@
                                 <p><strong>Preparation:</strong></p>
                                 <p class="text-center">
                                     Phthalic Acid (HOOC-C<sub>6</sub>H<sub>4</sub>-COOH) <br>
-                                    <span class="text-muted"><small>(* -COOH groups at ortho (1,2) positions*)</small></span> <br>
+                                    <span class="text-muted"><small>(-COOH groups at ortho (1,2) positions)</small></span> <br>
                                     + Ethylene Glycol (HO-CH<sub>2</sub>-CH<sub>2</sub>-OH) → Glyptal
                                 </p>
                                 <p><strong>Properties:</strong> Strong adhesion, electrical insulating properties.</p>
