--- a/Eapcetexam.html
+++ b/Eapcetexam.html
@@ -1121,7 +1121,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 3 marks</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/Kinematics.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/KinematicsP.html'">Practice</button>
                 <!-- <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/.html'">Test</button>-->
             </div>
@@ -1221,7 +1221,7 @@
             <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
             <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/mechanicalpropertiesoffluids'">Notes</button>
+                <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/physics/Notes/mechanicalpropertiesoffluids.html'">Notes</button>
                 <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/physics/question_images/FluidsP.html'">Practice</button>
                 <!-- <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/Maths/html'">Test</button>-->
             </div>
@@ -1789,7 +1789,7 @@
                         <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
                         <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                            <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                            <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/chemistry/Notes/GaseousandLiquidStates.html'">Notes</button>
                             <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/GaseousP.html'">Practice</button>
                             <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/chemistry/Easy/Gaseous&Liquideasy.html'">Test</button>
                         </div>
@@ -1828,7 +1828,7 @@
                         <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
                         <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                            <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                            <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/chemistry/Notes/Metallurgy.html'">Notes</button>
                             <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/MetallurgyP.html'">Practice</button>
                             <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/chemistry/Easy/Metallurgyeasy.htmltest.html'">Test</button>
                         </div>
@@ -1868,7 +1868,7 @@
                         <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
                         <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                           <!-- <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                           <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/chemistry/Notes/hydrogen&Compounds.html'">Notes</button>
                             <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/HydrogenP.html'">Practice</button>
                             <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/chemistry/Easy/Hydrogeneasy.html'">Test</button>
                         </div>
@@ -1948,7 +1948,7 @@
                         <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
                         <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                            <!--<button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                            <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/chemistry/Notes/solidstate.html'">Notes</button>
                             <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/Solid_State_P.html'">Practice</button>
                             <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/chemistry/Easy/SolidStateeasy.html'">Test</button>
                         </div>
@@ -1966,7 +1966,7 @@
                     </div>
                     <div class="card-footer text-center">
                         <p class="mb-2">Weightage:<br>EAPCET - 2 marks</p>
-                        <<div class="d-flex justify-content-center gap-3 flex-wrap">
+                        <div class="d-flex justify-content-center gap-3 flex-wrap">
 
                            <!-- <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
                             <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/SolutionsP.html'">Practice</button>
@@ -2008,7 +2008,7 @@
                         <p class="mb-2">Weightage:<br>EAPCET - 1 mark</p>
                         <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-                           <!-- <button class="custom-btn learn-more" onclick="window.location.href='learn-more.html'">Notes</button>-->
+                           <button class="custom-btn learn-more" onclick="window.location.href='Eapcet_Questions_html/chemistry/Notes/surfacechemistry.html'">Notes</button>
                             <button class="custom-btn practice" onclick="window.location.href='Eapcet_Questions_html/chemistry/question_images/SurfaceP.html'">Practice</button>
                             <button class="custom-btn test" onclick="window.location.href='Eapcet_Questions_html/chemistry/Easy/SurfaceChemistryeasy.html'">Test</button>
                         </div>
