--- a/Eapcet_Questions_html/Maths/Notes/differentiation.html
+++ b/Eapcet_Questions_html/Maths/Notes/differentiation.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Differentiation Formulas</title>
+  <link rel="icon" type="image/png" href="../../../logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Load MathJax for rendering math formulas -->
   <script type="text/javascript" async
