--- a/Eapcet_Questions_html/Maths/Notes/functions.html
+++ b/Eapcet_Questions_html/Maths/Notes/functions.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Functions</title>
+    <link rel="icon" type="image/png" href="../../../logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -540,7 +541,7 @@
                     <h4>Even and Odd Functions</h4>
                 </div>
                 <div class="card-body">
-                    <p>A function can be classified as **even**, **odd**, or **neither** based on its symmetry.</p>
+                    <p>A function can be classified as <b>even</b>, <b>odd</b>, or <b>neither</b> based on its symmetry.</p>
         
                     <div class="row">
                         <!-- Even Function -->
@@ -552,7 +553,7 @@
                                 <div class="card-body">
                                     <p>A function \( f(x) \) is even if:</p>
                                     <p class="text-center">\( f(-x) = f(x) \) for all \( x \) in the domain.</p>
-                                    <p>Even functions are symmetric about the **y-axis**.</p>
+                                    <p>Even functions are symmetric about the <b>y-axis</b>.</p>
                                     <p><strong>Example 1:</strong> \( f(x) = x^2 \)</p>
                                     <p>\( f(-x) = (-x)^2 = x^2 = f(x) \), so it is even.</p>
                                     <p><strong>Example 2:</strong> \( f(x) = \cos x \)</p>
@@ -570,7 +571,7 @@
                                 <div class="card-body">
                                     <p>A function \( f(x) \) is odd if:</p>
                                     <p class="text-center">\( f(-x) = -f(x) \) for all \( x \) in the domain.</p>
-                                    <p>Odd functions are symmetric about the **origin**.</p>
+                                    <p>Odd functions are symmetric about the <b>origin</b>.</p>
                                     <p><strong>Example 1:</strong> \( f(x) = x^3 \)</p>
                                     <p>\( f(-x) = (-x)^3 = -x^3 = -f(x) \), so it is odd.</p>
                                     <p><strong>Example 2:</strong> \( f(x) = \sin x \)</p>
