--- a/Eapcet_Questions_html/physics/Notes/gravitation.html
+++ b/Eapcet_Questions_html/physics/Notes/gravitation.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gravitation Chapter</title>
+    <title>Gravitation </title>
+    <link rel="icon" type="image/png" href="../../../logo.png">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
