--- a/Eapcet_Questions_html/physics/Notes/lawsofmotion.html
+++ b/Eapcet_Questions_html/physics/Notes/lawsofmotion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Laws of Motion</title>
+    <link rel="icon" type="image/png" href="../../../logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
