--- a/Eapcet_Questions_html/physics/Notes/mechanicalpropertiesoffluids.html
+++ b/Eapcet_Questions_html/physics/Notes/mechanicalpropertiesoffluids.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mechanical Properties of Fluids</title>
+    <link rel="icon" type="image/png" href="../../../logo.png">
     <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
