--- a/Eapcet_Questions_html/Maths/Notes/differentiation.html
+++ b/Eapcet_Questions_html/Maths/Notes/differentiation.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Differentiation Formulas</title>
+  <link rel="stylesheet" href="../styles.css">
   <link rel="icon" type="image/png" href="../../../logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Load MathJax for rendering math formulas -->
@@ -37,6 +38,12 @@
   </style>
 </head>
 <body>
+  <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
+    <nav>
+        <img src="../logo.png" alt="" class="logo">    
+    </nav>   
+  </section>
+  <br><br><br><br>
   <div class="container mt-5">
     
     <h1 class="text-center text-primary">Differentiation Formulas</h1>
@@ -245,7 +252,11 @@
 
     </div>
   </div>
-
+  <footer id="footer" class="footer" style="background-color: rgb(23, 41, 84); color: #ffffff; padding: 10px 0;">
+    <div class="container text-center">
+      <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
+    </div>
+</footer>
   <!-- Bootstrap JS, Popper.js, and jQuery (optional) -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
