--- a/Eapcet_Questions_html/Maths/Notes/matrices.html
+++ b/Eapcet_Questions_html/Maths/Notes/matrices.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Types of Matrices</title>
+    <title>Matrices</title>
+    <link rel="stylesheet" href="../styles.css">
+
     <link rel="icon" type="image/png" href="../../../logo.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -13,7 +15,12 @@
     </script>
 </head>
 <body>
-
+    <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
+        <nav>
+            <img src="../logo.png" alt="" class="logo">    
+        </nav>   
+      </section>
+      <br><br><br><br>
     <div class="container my-5">
         <h1 class="text-center text-primary">Matrices</h1>
 
@@ -1010,8 +1017,12 @@
 </div>
 
 
-
-
+    </div>
+<footer id="footer" class="footer" style="background-color: rgb(23, 41, 84); color: #ffffff; padding: 10px 0;">
+    <div class="container text-center">
+      <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
+    </div>
+</footer>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
