--- a/Eapcet_Questions_html/Maths/Notes/trignometricequations.html
+++ b/Eapcet_Questions_html/Maths/Notes/trignometricequations.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trignometric equations</title>
     <link rel="icon" type="image/png" href="../../../logo.png">
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
 </head>
 <body class="bg-light">
-
+    <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
+        <nav>
+            <img src="../logo.png" alt="" class="logo">    
+        </nav>   
+      </section>
+      <br><br><br><br>
     <div class="container mt-5">
 
         <div class="card shadow-lg mt-4">
@@ -238,14 +244,15 @@
         </div>
     </div>
 
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
-
-
+</div></div>
+<footer id="footer" class="footer" style="background-color: rgb(23, 41, 84); color: #ffffff; padding: 10px 0;">
+    <div class="container text-center">
+      <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
     </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
+ 
