--- a/Eapcet_Questions_html/Maths/Notes/trignometry.html
+++ b/Eapcet_Questions_html/Maths/Notes/trignometry.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trigonometry </title>
     <link rel="icon" type="image/png" href="../../../logo.png">
+    <link rel="stylesheet" href="../styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
@@ -17,7 +18,12 @@
 
 </head>
 <body class="bg-light">
-
+    <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
+        <nav>
+            <img src="../logo.png" alt="" class="logo">    
+        </nav>   
+      </section>
+      <br><br><br><br>
     <div class="container mt-5">
         <h1 class="text-center mb-4">Trigonometric Functions </h1>
 
@@ -562,7 +568,11 @@
         </div>
         
     </div>
-
+    <footer id="footer" class="footer" style="background-color: rgb(23, 41, 84); color: #ffffff; padding: 10px 0;">
+        <div class="container text-center">
+          <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
+        </div>
+    </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
