--- a/Eapcet_Questions_html/chemistry/Notes/surfacechemistry.html
+++ b/Eapcet_Questions_html/chemistry/Notes/surfacechemistry.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surface chemistry</title>
+    <link rel="stylesheet" href="../styles.css">
     <link rel="icon" type="image/png" href="../../../logo.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +21,12 @@
     </script>
 </head>
 <body>
-    
+    <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
+        <nav>
+            <img src="../logo.png" alt="" class="logo">    
+        </nav>   
+      </section>
+      <br><br><br><br>
     <div class="container mt-5">
         <h1 class="text-center mb-4">Surface Chemistry</h1>
         <div class="card border-primary mb-3">
@@ -1046,7 +1052,11 @@
     
     <!-- Bootstrap JS -->
 
-
+    <footer id="footer" class="footer" style="background-color: rgb(23, 41, 84); color: #ffffff; padding: 10px 0;">
+        <div class="container text-center">
+          <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
