--- a/Eapcet_Questions_html/physics/Notes/mechanicalpropertiesoffluids.html
+++ b/Eapcet_Questions_html/physics/Notes/mechanicalpropertiesoffluids.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mechanical Properties of Fluids</title>
+    <link rel="stylesheet" href="../styles.css">
     <link rel="icon" type="image/png" href="../../../logo.png">
     <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
@@ -11,6 +12,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
+        <nav>
+            <img src="../logo.png" alt="" class="logo">    
+        </nav>   
+      </section>
+      <br><br><br><br>
     <div class="container mt-5">
         <h1 class="text-center mb-4">Mechanical Properties of Fluids</h1>
         <div class="row justify-content-center">
@@ -804,6 +811,11 @@
   </div>
   
     </div>
+    <footer id="footer" class="footer" style="background-color: rgb(23, 41, 84); color: #ffffff; padding: 10px 0;">
+        <div class="container text-center">
+          <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
