--- a/Eapcet_Questions_html/physics/Notes/systemofparticlesandrotationalmotion.html
+++ b/Eapcet_Questions_html/physics/Notes/systemofparticlesandrotationalmotion.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>System of particles and rotational motion</title>
+    <link rel="stylesheet" href="../styles.css">
+
     <link rel="icon" type="image/png" href="../../../logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" async
@@ -11,6 +13,12 @@
     </script>
 </head>
 <body class="bg-light">
+    <section class="header" style="font-family: sans-serif;color: rgb(23, 41, 84);">
+        <nav>
+            <img src="../logo.png" alt="" class="logo">    
+        </nav>   
+      </section>
+      <br><br><br><br>
     <div class="container mt-5">
         <h1 class="text-center text-primary">System of Particles and Rotational Motion</h1>
         <!-- Center of Mass and System of Particles -->
@@ -673,6 +681,11 @@
 
 
 </div>
+<footer id="footer" class="footer" style="background-color: rgb(23, 41, 84); color: #ffffff; padding: 10px 0;">
+    <div class="container text-center">
+      <p>&copy; 2024 Prathibha Institute. All rights reserved.</p>
+    </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
