--- a/Eapcetexam.html
+++ b/Eapcetexam.html
@@ -2058,7 +2058,7 @@
                             <a href="Eapcet_Questions_html/Eapcet Full Test/Full_Test_2.html" class="btn btn-success mb-2">Full Test 2</a>
                             <a href="Eapcet_Questions_html/Eapcet Full Test/Full_Test_3.html" class="btn btn-success mb-2">Full Test 3</a>
                             <a href="Eapcet_Questions_html/Eapcet Full Test/mocktest.html" class="btn btn-success mb-2">Mock Test </a>
-                           
+                            <a href="Eapcet_Questions_html/Eapcet Full Test/mocktest2.html" class="btn btn-success mb-2">Mock Test 2 </a>
                         </div>
                         
                     </div>
