--- a/Eapcet_Questions_html/chemistry/Easy/coordinationeasy.html
+++ b/Eapcet_Questions_html/chemistry/Easy/coordinationeasy.html
@@ -122,7 +122,7 @@
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "Eapcet";
     const examTimer = 20;
-    const examfolder = "Coordination Compounds";
+    const examfolder = "coordination compounds";
     const numberofquestions = 19;
     const positivemark = 1;
     const negativemark = 0;
