--- a/Eapcet_Questions_html/Eapcet Full Test/Full_Test_3.html
+++ b/Eapcet_Questions_html/Eapcet Full Test/Full_Test_3.html
@@ -144,7 +144,7 @@
   
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
+  <script src="names.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "Eapcet";
@@ -153,6 +153,8 @@
     const numberofquestions = 160;
     const positivemark = 1;
     const negativemark = 0;
+    const students = localStorage.getItem("students");
+
 
     // Example hardcoded answers (you can replace this with actual answer keys)
     const correctAnswers = [
@@ -195,6 +197,13 @@
 
     if (!studentName) {
       alert("Please enter your name.");
+      return;
+    }
+
+  
+    let lowerCaseName = studentName.toLowerCase();
+    if(!students.includes(lowerCaseName)){
+      alert("Please register your name.");
       return;
     }
 
