--- a/payment.html
+++ b/payment.html
@@ -79,9 +79,9 @@
                 <img src="payment.png" alt="UPI QR Code" class="img-fluid rounded" style="max-width: 250px;">
             </div>
             <p class="mt-3">Scan the QR Code and pay <strong class="text-success">&#8377;499.00</strong> using UPI-enabled apps.</p>
-            <button class="btn btn-success mt-2 w-100" href="upi://pay?pa=8499930530@ybl&pn=PrathibhaInstitute&am=499&cu=INR">
+            <a class="btn btn-success mt-2 w-100" href="upi://pay?pa=8499930530@ybl&pn=PrathibhaInstitute&am=499&cu=INR">
                 Click here for payment
-            </button>
+            </a>
             <p class="text-danger">Approve payment within <span id="countdown-timer">05:00</span></p>
             <div class="d-flex justify-content-center my-3">
                 <img src="phonepe-logo.png" alt="PhonePe" width="45" class="mx-2">
