--- a/Eapcet_Questions_html/Eapcet Full Test/Full_Test_7.html
+++ b/Eapcet_Questions_html/Eapcet Full Test/Full_Test_7.html
@@ -153,7 +153,7 @@
     const numberofquestions = 160;
     const positivemark = 1;
     const negativemark = 0;
-    const students = localStorage.getItem("students");
+    const students = JSON.parse(localStorage.getItem("students"));
     // Example hardcoded answers (you can replace this with actual answer keys)
     const correctAnswers = [
       "B", "D", "B", "D", "B", "C", "D", "A", "B","A",
@@ -198,8 +198,16 @@
       return;
     }
     
-    let lowerCaseName = studentName.toLowerCase();
-    if(!students.includes(lowerCaseName)){
+    let found = false;
+
+    for (let i =0; i < students.length; i++){
+      if(students[i].toLowerCase() === studentName.toLowerCase()){
+        found = true;
+        break;
+      }
+    }
+
+    if(!found){
       window.location.href = "../../payment.html";
       return;
     }
