--- a/Eapcet_Questions_html/Eapcet Full Test/Full_Test_8.html
+++ b/Eapcet_Questions_html/Eapcet Full Test/Full_Test_8.html
@@ -153,7 +153,7 @@
     const numberofquestions = 160;
     const positivemark = 1;
     const negativemark = 0;
-    const students = localStorage.getItem("students");
+    const students = JSON.parse(localStorage.getItem("students"));
     // Example hardcoded answers (you can replace this with actual answer keys)
     const correctAnswers = [
       "C", "A", "A", "A", "A", "A", "D", "C", "D","C",
@@ -197,8 +197,16 @@
       alert("Please enter your name.");
       return;
     }
-    let lowerCaseName = studentName.toLowerCase();
-    if(!students.includes(lowerCaseName)){
+    let found = false;
+
+    for (let i =0; i < students.length; i++){
+      if(students[i].toLowerCase() === studentName.toLowerCase()){
+        found = true;
+        break;
+      }
+    }
+
+    if(!found){
       window.location.href = "../../payment.html";
       return;
     }
