--- a/Eapcet_Questions_html/chemistry/Alcohols.html
+++ b/Eapcet_Questions_html/chemistry/Alcohols.html
@@ -146,7 +146,7 @@
   
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
+  <script src="../names.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "Eapcet-Alcohols,Phenols and Ethers";
@@ -155,7 +155,7 @@
     const numberofquestions = 15;
     const positivemark = 1;
     const negativemark = 0;
-
+    const students = JSON.parse(localStorage.getItem("students"));
     // Example hardcoded answers (you can replace this with actual answer keys)
     const correctAnswers = [
       "C", "B", "B", "D", "C", "A", "D", "A", "C","B",
@@ -182,6 +182,19 @@
 
     if (!studentName) {
       alert("Please enter your name.");
+      return;
+    }
+    let found = false;
+
+    for (let i =0; i < students.length; i++){
+      if(students[i].toLowerCase() === studentName.toLowerCase()){
+        found = true;
+        break;
+      }
+    }
+
+    if(!found){
+      window.location.href = "../../payment.html";
       return;
     }
 
