--- a/Eapcet_Questions_html/Maths/Circle_and_System_of_Circles.html
+++ b/Eapcet_Questions_html/Maths/Circle_and_System_of_Circles.html
@@ -144,7 +144,7 @@
   
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
+  <script src="../names.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "Eapcet";
@@ -153,7 +153,7 @@
     const numberofquestions = 15;
     const positivemark = 1;
     const negativemark = 0;
-
+    const students = JSON.parse(localStorage.getItem("students"));
     // Example hardcoded answers (you can replace this with actual answer keys)
     const correctAnswers = [
       "C", "D", "C", "D", "A", "A", "B", "A", "A", "C",
@@ -187,6 +187,19 @@
 
     if (!studentName) {
       alert("Please enter your name.");
+      return;
+    }
+    let found = false;
+
+    for (let i =0; i < students.length; i++){
+      if(students[i].toLowerCase() === studentName.toLowerCase()){
+        found = true;
+        break;
+      }
+    }
+
+    if(!found){
+      window.location.href = "../../payment.html";
       return;
     }
 
