--- a/Eapcet_Questions_html/chemistry/d_f_block.html
+++ b/Eapcet_Questions_html/chemistry/d_f_block.html
@@ -144,7 +144,7 @@
   
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
+  <script src="../names.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
     const examName = "Eapcet-D&F";
@@ -153,7 +153,7 @@
     const numberofquestions = 15;
     const positivemark = 1;
     const negativemark = 0;
-
+    const students = JSON.parse(localStorage.getItem("students"));
     // Example hardcoded answers (you can replace this with actual answer keys)
     const correctAnswers = [
       "A", "C", "B", "B", "C", "D", "C", "B", "D","C",
@@ -182,6 +182,20 @@
       alert("Please enter your name.");
       return;
     }
+    let found = false;
+
+    for (let i =0; i < students.length; i++){
+      if(students[i].toLowerCase() === studentName.toLowerCase()){
+        found = true;
+        break;
+      }
+    }
+
+    if(!found){
+      window.location.href = "../../payment.html";
+      return;
+    }
+
 
     // Store all data in localStorage
     localStorage.setItem("studentName", studentName);
