--- a/Eapcet_Questions_html/chemistry/question_images/SurfaceP.html
+++ b/Eapcet_Questions_html/chemistry/question_images/SurfaceP.html
@@ -288,7 +288,7 @@
             <h4>Level Medium:</h4>
             <div class="star-question-list" id="medium-list"></div><br>
     
-            <h4>Level Difficult:</h4>
+            <!-- <h4>Level Difficult:</h4> -->
             <div class="star-question-list" id="difficult-list"></div>
         </div>
     </div>
