--- a/Eapcetexam.html
+++ b/Eapcetexam.html
@@ -318,7 +318,7 @@
                     <!-- Content to be shown when button is clicked -->
                     <div id="easy-content" style="display: none; margin-top: 10px;">
                         <div class="container-fluid">
-                            <h1 class="text-center mb-4">Subjects and Easy Topics Questions</h1>
+                            <h1 class="text-center mb-4">Subjects and Topic-Wise Questions</h1>
                     
                             <!-- Mathematics Section -->
 <h2 class="mt-5 mb-4 chemistry-heading">Mathematics</h2>
