--- a/New exams.html
+++ b/New exams.html
@@ -87,17 +87,17 @@
 
   <!-- Exam Cards Section -->
   <div class="container mt-5">
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-      <div class="col">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-2">
+      <div class="col-6">
         <div class="card exam-card h-100">
-          <div class="card-body">
+          <div class="card-body ">
             <h5 class="card-title"><b>EAPCET 2025</b></h5>
             <p class="card-text">A crucial entrance exam for engineering and medical streams.</p>
             <a href="Eapcetexam.html" class="btn btn-primary">Take Test</a>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-6">
         <div class="card exam-card h-100">
           <div class="card-body">
             <h5 class="card-title"><b>JEE Mains</b></h5>
@@ -106,7 +106,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <!-- <div class="col">
         <div class="card exam-card h-100">
           <div class="card-body">
             <h5 class="card-title"><b>Programming Challenges</b></h5>
@@ -123,7 +123,7 @@
             <a href="aptitude.html" class="btn btn-primary">Take Test</a>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
